[tool.poetry]
name = "bert_test"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrdict = "^2.0.1"
mecab = "^0.996.2"
torch = {path = "../../packages/torch-1.8.0a0+821287e-cp39-cp39-macosx_11_0_arm64.whl"}
torchtext = {path = "../../packages/torchtext-0.10.0a0+735d5e7-cp39-cp39-macosx_11_0_arm64.whl"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
