[tool.poetry]
name = "bert_test"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attrdict = "^2.0.1"
mecab = "^0.996.2"
torchtext = "^0.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
